--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agentwire",
+  "name": "ag-ui",
   "author": "Markus Ecker <markus.ecker@gmail.com>",
   "private": true,
   "scripts": {
