--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agentwire/client",
+  "name": "@ag-ui/client",
   "author": "Markus Ecker <markus.ecker@gmail.com>",
   "version": "0.0.27",
   "private": false,
@@ -23,9 +23,9 @@
     "unlink:global": "pnpm unlink --global"
   },
   "dependencies": {
-    "@agentwire/core": "workspace:*",
-    "@agentwire/proto": "workspace:*",
-    "@agentwire/encoder": "workspace:*",
+    "@ag-ui/core": "workspace:*",
+    "@ag-ui/proto": "workspace:*",
+    "@ag-ui/encoder": "workspace:*",
     "@types/uuid": "^10.0.0",
     "fast-json-patch": "^3.1.1",
     "rxjs": "7.8.1",
