--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
+    "build:clean": "pnpm -r clean && pnpm install && turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md,mdx}\"",
     "check-types": "turbo run check-types",
     "test": "turbo run test",
-    "publish": "turbo run build --filter=./packages/* && pnpm publish -r --filter=./packages/*",
+    "publish": "pnpm -r clean && pnpm install && turbo run build --filter=./packages/* && pnpm publish -r --filter=./packages/*",
     "bump": "pnpm --filter './packages/*' exec -- pnpm version"
   },
   "devDependencies": {
